--- a/petra.css
+++ b/petra.css
@@ -3,15 +3,14 @@
   padding: 0px;
 }
 
+label{
+  font: 12px verdana, sans-serif;
+}
+
 h1 > a{
   font: bold 50px verdana , sans-serif;
   text-decoration: none;
-
-}
-
- h2 > a{
-  font: bold 20px verdana, sans-serif;
-  text-decoration: none;
+  color:black;
 }
 
 h2 {
@@ -20,6 +19,7 @@ h2 {
 
 th{
   font: bold 15px verdana, sans-serif;
+
 }
 
 td{
@@ -32,17 +32,17 @@ header , section, aside, hgroup, nav, footer, article, figcaption, figure{
 
 body{
   text-align: center;
+  background-color:rgb(0,0,0);
 }
 
 #agrupar{
-  width: 1000px;
+  width: 960px;
   margin: 15px auto;
   text-align: left;
 }
 
 #cabecera {
-  background: #dcdcdc;
-  border: 1px solid #999999;
+  background-color: rgb(255,255,255);
   padding: 20px;
   border-radius: 10px 10px 0px 0px;
   text-align: center;
@@ -50,25 +50,50 @@ body{
 }
 
 #seccion1{
-  border: 1px solid #999999;
   padding: 20px;
-  background: #fffff0;
-  margin: 3px;
-}
+  background-color: rgb(255,255,255);
+/*  background: #fffff0; */
+  margin: 7px;
+  }
 
 #seccion2{
-  border: 1px solid #999999;
+  float: left;
   padding: 20px;
-  background: #fffff0;
-  margin: 3px;
+  background-color: rgb(255,255,255);
+/*  background: #fffff0; */
+  margin: 7px;
+}
+
+#seccion3{
+  padding:20px;
+  margin: 7px;
+  background-color: rgb(255,255,255);
+/*  background: #FFFFF0; */
+}
+
+#seccion3 > a{
+  text-decoration: none;
+  color:black;
+  font: bold 30px verdana , sans-serif;
 }
 
 #menu{
-  background: #fffff0;
+  background-color: rgb(0,0,0);
+  /*border: 1px solid #999999; */
+}
+
+#menu li{
+  display: inline-block;
+  list-style: none;
+  padding: 5px;
+  font: bold 14px verdana, sans-serif;
+  color:white;
 }
 
 footer{
-  background: #dcdcdc;
+  clear: both;
+  background
   text-align: center;
   border-radius: 0px 0px 10px 10px;
+  background-color: rgb(255,255,255);
 }
